welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: not a legal formal parameter
	if ( a<=20 && a=>10 ) { true } 
                   ^in1020:3: error: not a legal formal parameter
	else if ( b<=20 && b=>10 ) { true }
                        ^