welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
	if ( a<=20 && a=>10 ) { true } 
	else if ( b<=20 && b=>10 ) { true }
	else { false }
}
